--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ canvas {
     height: 100%;
 }
 
-.lil-gui {
+/* .lil-gui {
     --width: 450px;
     max-width: 90%;
     --widget-height: 20px;
@@ -25,4 +25,4 @@ canvas {
     --focus-color: rgba(255, 255, 255, .4);
     --hover-color: rgba(255, 255, 255, .5);
     --font-family: monospace;
-}
+} */
